feat: meal planner
